<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UFPB Mapas</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="greeting">Bem vindo ao UFPB Mapas!</string>
    <string name="qrcode_button">QR Code</string>
    <string name="destino_button">Locais</string>
    <string name="evento_button">Evento</string>
    <string name="gps_button">Mapa da UFPB</string>
    <string name="todo_string">TODO</string>
    <string name="hint_event">Código do evento com 8 dígitos</string>
    <string name="label_destino">Opções de locais</string>
    <string name="event_popup">Digite o Código do Evento</string>
    <string name="event_popup_button">QR Code</string>
    <string name="cancel">Cancelar</string>
    <string name="destination_name">Locais</string>
    <string name="landmark_name">Posição</string>
    <string name="landmark_button_list">Criar rota para:</string>
    <string name="route_button_list">Instruções:</string>
    <string name="route_name">Rota</string>
    <string name="destinationlandmark_button_list">Criar rota de:</string>
    <string name="destinationlandmark_name">Local</string>
    <string name="maps_text">Mapa da UFPB:</string>
    <string name="gps_name">Mapa da UFPB</string>
    <string name="equipe">About Us :)</string>
    <string name="aboutUs">Este é um projeto desenvolvido para conclusão da disciplina de Engenharia de Software na UFPB\n\n Equipe: Ana Beatrice Severo\n Elaine Soares\n José Lauciano Almeida\n Thiago Vinícius\n Vinícius Filgueiras</string>
    <string name="next">Próximo</string>
    <string name="previous">Anterior</string>
    <string name="sair">Sair</string>

</resources>
