<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/landmarkLinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_2"
    android:orientation="vertical"
    android:screenOrientation="portrait">
    
    <TextView
        android:id="@+id/landmarkName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:text="@string/landmark_name"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/buttonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonPrevious"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="gotoPrevious"
            android:text="@string/previous" />

    </RelativeLayout>

    <TextView
        android:id="@+id/buttonTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/landmarkName"
        android:layout_marginTop="154dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:text="@string/route_button_list"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <entities.TouchImageView
        android:id="@+id/landmarkImage"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/landmarkName"
        android:clickable="false"
        android:contentDescription="@string/todo_string" />

</RelativeLayout>
