<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/landmarkLinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_2"
    android:orientation="vertical"
    android:screenOrientation="portrait">
    
    <TextView
        android:id="@+id/landmarkName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:text="@string/landmark_name"
        android:textColor="#ffffff"
        android:textSize="20sp" />
    
    <ImageView
        android:id="@+id/landmarkImage"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:clickable="false"
        android:contentDescription="@string/todo_string" />

    <TextView
        android:id="@+id/buttonTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:text="@string/route_button_list"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/buttonLandmarkScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/buttonLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

    </ScrollView>

</LinearLayout>
